# ProxyDiscovery-Mac

./: .gitignore  CMakeLists.txt  README.md
include/: IProxyDiscoveryEngine.h  ProxyRecord.h
src/: CMakeLists.txt  ISystemConfigurationAPI.h  ProxyDiscoveryEngine.h  ProxyDiscoveryEngine.mm  ProxyDiscoveryEngineFactory.mm  ProxyLogger.cpp  ProxyRecord.cpp  StringUtil.mm  SystemConfigurationAPI.h
src/darwin/: ProxyDiscoveryEngine.h  ProxyDiscoveryEngine.mm  StringUtil.hpp  SystemConfigurationAPI.mm
src/linux/: IProxyCommandExec.hpp  IProxyVerifier.hpp  ProxyCommandExec.cpp  ProxyCommandExec.hpp  ProxyDiscoveryEngine.cpp  ProxyDiscoveryEngine.hpp  ProxyDiscoveryEngineFactory.cpp  ProxyVerifier.cpp  ProxyVerifier.hpp
test/: CMakeLists.txt  FakeSystemConfigurationAPI.hpp  FakeSystemConfigurationAPI.mm  TestProxyDiscovery.mm
test/linux/: TestProxyDiscovery.cpp
test/linux/mock/: MockCommandExec.hpp  MockProxyVerifier.hpp
